# GEM

./: README.md
in-core/: CMakeLists.txt  build.sh  script.sh
in-core/lib/filter/: CMakeLists.txt
in-core/lib/filter/include/: filter.h  filter_kernel.cuh
in-core/lib/filter/src/: filter.cu  filter_kernel.cu
in-core/lib/graph/: CMakeLists.txt
in-core/lib/graph/include/: cpuGraph.h  gpuGraph.h
in-core/lib/graph/src/: cpuGraph.cpp  gpuGraph.cpp
in-core/lib/io/: CMakeLists.txt
in-core/lib/io/include/: FastFileReader.hpp  io.h
in-core/lib/io/src/: io.cu
in-core/lib/join/include/: join_trie.cuh  join_trie_kernel.cuh
in-core/lib/join/src/: join_trie.cu  join_trie_kernel.cu
in-core/lib/plan/: CMakeLists.txt
in-core/lib/structure/: CMakeLists.txt
in-core/lib/structure/include/: construct_kernel.cuh  cuckooHash.cuh  lattice.h  memory_manager.h  memory_types.h  unifiedTrie.cuh
in-core/lib/structure/src/: construct_kernel.cu  lattice.cpp  memory_manager.cu  unifiedTrie.cu
in-core/lib/utils/include/: cuda_helpers.cuh  defs.h
in-core/lib/utils/src/: cuda_helpers.cu  globals.cu
in-core/src/: CMakeLists.txt  main.cu
out-of-core/: .gitignore  CMakeLists.txt  build.sh  script.sh
out-of-core/lib/filter/: CMakeLists.txt
out-of-core/lib/filter/include/: filter.h  filter_kernel.cuh
out-of-core/lib/filter/src/: filter.cu  filter_kernel.cu
out-of-core/lib/graph/include/: cpuGraph.h  gpuGraph.h
out-of-core/lib/graph/src/: cpuGraph.cpp  gpuGraph.cpp
out-of-core/lib/io/: CMakeLists.txt
out-of-core/lib/io/src/: io.cu
out-of-core/lib/join/: CMakeLists.txt
out-of-core/lib/join/include/: join_trie.cuh  join_trie_kernel.cuh
out-of-core/lib/join/src/: join_trie.cu  join_trie_kernel.cu
out-of-core/lib/plan/include/: relax.h
out-of-core/lib/plan/src/: relax.cpp
out-of-core/lib/structure/: CMakeLists.txt
out-of-core/lib/structure/include/: construct_kernel.cuh  host_memory_manager.cuh  memory_manager.cuh  memory_manager_legacy.h  policy.h  unifiedTrie.cuh
out-of-core/lib/structure/src/: construct_kernel.cu  cuckooHash.cu  host_memory_manager.cu  lattice.cpp  memory_manager.cu  memory_manager_legacy.cu  policy.cpp  unifiedTrie.cu
out-of-core/lib/utils/: CMakeLists.txt
out-of-core/lib/utils/include/: cuda_helpers.cuh  defs.h  globals.h
out-of-core/lib/utils/src/: cuda_helpers.cu
out-of-core/src/: CMakeLists.txt  main.cu
